# zir_assistant

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: build_testset.py  eval.py  eval_gen.py  index.py  scrape.py
zir_assistant/: __init__.py  app.py  config.py  indexer.py  rag.py  scraper.py
zir_assistant/static/: index.html
